# Analyse-und-Prognose-der-Umsaetze-von-Verkaufsautomaten

./: README.md  pyproject.toml  requirements.txt  run_api.sh  run_dashboard.sh
api/: main.py
dashboard/: Home.py  README.md  config.py
dashboard/components/: charts.py  filters.py  kpi_cards.py
dashboard/pages/: 1_📊_Sales_Analytics.py  2_🤖_Model_Performance.py  3_🔮_API_Predictions.py
dashboard/utils/: api_client.py  calculations.py  data_loader.py  model_utils.py  time_aggregation.py
models/: feature_selector_20250622_224158.joblib  feature_selector_20250623_011929.joblib  model_metadata_20250622_224158.json  model_metadata_20250623_005151.json  model_metadata_20250623_011929.json  model_monitoring_20250622_224158.md  model_monitoring_20250623_005151.md  model_monitoring_20250623_011929.md  poly_features_20250623_011929.joblib  sales_prediction_pipeline_20250622_224158.joblib  sales_prediction_pipeline_20250623_005151.joblib  sales_prediction_pipeline_20250623_011929.joblib  sales_prediction_service_20250622_224158.py  sales_prediction_service_20250623_005151.py  sales_prediction_service_20250623_011929.py  scaler_20250622_224158.joblib  scaler_20250623_011929.joblib  xgb_enhanced_20250622_224158.joblib  xgb_enhanced_20250623_011929.joblib
notebooks/: README.md  daily_sales_model.pkl  daily_sales_prediction.ipynb  daily_sales_prediction_advanced.ipynb  main copy.ipynb
scripts/data_processing/: CONSTANTS.py  standardize_excel_files.py
scripts/data_processing/formatters/: __init__.py  clean2022_12_format.py  direct_columns_format.py  format_2024_05.py  (+4 more)
(+33 files in other folders)
