[project]
name = "fom-verkaufsautomaten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "fuzzywuzzy>=0.18.0",
    "prophet<=1.1.7",
    "xgboost<=3.0.2",
    "openpyxl",
    "scikit-learn>=1.7.0",
    "lightgbm>=4.6.0",
    "streamlit>=1.40.0",
    "plotly>=5.27.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]
